--- a/style.css
+++ b/style.css
@@ -112,9 +112,6 @@ section{
     margin-bottom: 50px;
 }
 
-/* section + section{
-    margin-top: 25px;
-} */
 .section-1{
     margin-top: 50px;
     /* padding: 25px 25px; */
@@ -217,4 +214,143 @@ footer{
 
 .section-3{
     margin-bottom: 250px;
+}
+
+.location {
+    max-width: 400px;
+}
+
+button:hover{
+    cursor: pointer;
+    opacity: 0.6;
+}
+
+.social i:hover{
+    color: hsl(322, 100%, 66%);
+    border: 1px solid hsl(322, 100%, 66%);
+}
+
+li a:hover{
+    text-decoration: underline;
+}
+@media (min-width:600px) and (max-width:900px) {
+    main{
+        width: 70%;
+        /* background-color: black; */
+    }
+    .section-1, .section-2, .section-3{
+        width: 75%;
+        margin: 0 auto;
+
+    }
+    .section-1,
+    .section-2,
+    .section-3,
+    .over-footer {
+        /* font-size: 14px; */
+        box-shadow: 1px 1px 10px #e6e6e6;
+        border-radius: 15px;
+        margin-bottom: 50px;
+    }
+    
+    .section-1 {
+        margin-top: 50px;
+        /* padding: 25px 25px; */
+    }
+    .section-3{
+        margin-bottom: 200px;
+    }
+
+    .over-footer{
+        max-width: 600px;
+    }
+}
+
+@media (min-width:900px) {
+    body{
+        text-align: left;
+        font-size: 18px;
+    }
+    .container{
+        width: 80%;
+    }
+    section{
+        text-align: center;
+    }
+    section div{
+        display: inline-block;
+        /* width: 40%; */
+        line-height: 1.5em;
+        padding-left: 5%;
+    }
+    section div:first-child{
+        width: 45%;
+        padding-top: 12%;
+        text-align: left;
+        max-width: 500px;
+    }
+    section div:last-child{
+        width: 45%;
+    }
+    .col-reverse{
+        flex-direction: row;
+        justify-content: space-around;
+    }
+    .footer-flex{
+        display: flex;
+        justify-content: space-between;
+    }
+    .section-2{
+        flex-direction: row-reverse;
+    }
+    section img{
+        max-height: 300px;
+    }
+    .container{
+        width: 90%;
+    }
+    .container-1{
+        width: 100%;
+    }
+
+    .flex-ds{
+        display: flex;
+        justify-content: space-between;
+    }
+    .hero-content{
+        width: 45%;
+        text-align: left;
+        padding-top: 75px;
+    }
+    .hero-image{
+        width: 52%;
+    }
+    .get-start{
+        font-size: 13px;
+        padding-top: 15px;
+        padding-bottom: 15px;
+    }
+    .logo{
+        width: 200px;
+    }
+    .header-logo{
+        margin-bottom: 75px;
+    }
+    .try-btn{
+        font-size: 13px;
+        padding: 15px 50px;
+    }
+    .hero-content h1{
+        max-width: 450px;
+        font-size: 42px;
+        line-height: 1.4em;
+    }
+    .over-footer h4{
+        font-size: 24px;
+    }
+    .get-start{
+        padding-left: 75px;
+        padding-right: 75px;
+    }
+
 }
