--- a/style.css
+++ b/style.css
@@ -352,5 +352,8 @@ li a:hover{
         padding-left: 75px;
         padding-right: 75px;
     }
+    header{
+        background-image: url('/images/bg-hero-desktop.svg');
+    }
 
 }
